--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <title>Weather Forecast App</title>
 </head>
 <body class="m-0 p-0 box-border font-serif" style="background-image: url('./assets/background.jpg')">
-    <h1 class="text-3xl font-bold  text-black bg-white text-center">Weather Dashboard</h1>
-    <div class="flex flex-row p-5 gap-32"id="container">
-        <div class="w-72 h-14 px-px  rounded my-2.5 text-xl" id="weatherInput">
-            <h1 class="text-white text-xl font-bold">Enter a City Name</h1>
+    <h1 class="text-3xl font-bold  text-black bg-white text-center w-auto"> Weather Forecast </h1>
+    <div class="flex flex-row p-5 gap-20"id="container">
+        <div class="w-64 h-14 px-px  rounded  text-xl" id="weatherInput">
+            <h1 class="text-white text-xl ">Enter a City Name</h1>
             <input class="w-64 h-9 px-px cursor-pointer text-sm font-bold pl-5" id="cityInput" type="text" placeholder="E.g., New York, London, Tokyo" >
             <button class="w-64 text-center bg-white text-sm mt-4 p-2 font-bold hover:bg-purple-500 hover:text-white hover:translate-y-1" id="search">Search</button>
-            <div class="mt-3 text-white" id="separator">———————or———————</div>
+            <div class="mt-3 text-white text-sm" id="separator">——————————or——————————</div>
                 <button class="w-64 text-center bg-gray-400 text-sm mt-4 p-2 font-bold" id="location">Use Current Location</button>
         </div>
-            <div id="weatherData">
-                <div id="CurrentWeather">
+            <div class="my-2.5" id="weatherData">
+                <div class="flex flex-row bg-white flex-wrap w-full h-40 justify-between p-5" id="currentWeather">
                     <div id="information">
                             <h3>(————)</h3>
                             <img src="" alt="">
@@ -26,42 +26,42 @@
                             <h4>Wind: ——M/S</h4>
                             <h4>Humidity: ——%</h4>
                     </div>
-                    <div id="icon">
-                        <img src="./assets/rainy.png" alt="rain" class="w-20 h-20">
+                    <div class="w-20 h-20" id="icon">
+                        <img src="./assets/rainy.png" alt="rain" >
                         <h4>Moderate Rain</h4>
                     </div>
                 </div>
                 <div id="daysForecast">
-                    <h2>5 Days Forecst</h2>
-                    <ul id="weather-cards">
-                        <li id="card">
+                    <h2 class="my-2.5">5 Days Forecst</h2>
+                    <ul class="flex flex-row flex-wrap text-sm bg-white " id="weather-cards">
+                        <li class="basis-1/5 " id="card">
                             <h3>(————)</h3>
                             <img src="" alt="">
                             <h4>Temperature: ——°C</h4>
                             <h4>Wind: ——M/S</h4>
                             <h4>Humidity: ——%</h4>
                         </li>
-                        <li id="card">
+                        <li class="basis-1/5 " id="card">
                             <h3>(————)</h3>
                             <img src="" alt="">
                             <h4>Temperature: ——°C</h4>
                             <h4>Wind: ——M/S</h4>
                             <h4>Humidity: ——%</h4>
                         </li>
-                        <li id="card">
+                        <li class="basis-1/5 " id="card">
                             <h3>(————)</h3>
                             <img src="" alt="">
                             <h4>Temperature: ——°C</h4>
                             <h4>Wind: ——M/S</h4>
                             <h4>Humidity: ——%</h4>
-                        <li id="card">
+                        <li class="basis-1/5 " id="card">
                             <h3>(————)</h3>
                             <img src="" alt="">
                             <h4>Temperature: ——°C</h4>
                             <h4>Wind: ——M/S</h4>
                             <h4>Humidity: ——%</h4>
                         </li>
-                        <li id="card">
+                        <li class="basis-1/5" id="card">
                             <h3>(————)</h3>
                             <img src="" alt="">
                             <h4>Temperature: ——°C</h4>
@@ -72,6 +72,7 @@
                 </div>
             </div>    
     </div>
+    <button id="city-dropdown">city-dropdown</button>
 <script src="script.js" defer></script>  
 </body>
 </html>
